# Undistracted_Timer

./: .gitignore  README.md  app.js  index.html  manifest.json  package-lock.json  package.json  start-pomodoro.command  styles.css
scripts/: resign-and-package.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
web/: app.js  index.html  manifest.json  styles.css
