[package]
name = "undistracted-timer"
version = "0.1.0"
description = "A quiet interval timer for focused work sessions and intentional breaks."
authors = ["Toufik Bens"]
edition = "2021"

[lib]
name = "undistracted_timer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
